Added sword and defeating snakes. TODO: add complete message; make snake movement better

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 		<img id="player_l" src="img/player_l.png" alt="" style="display:none">
 		<img id="player_dead" src="img/player_dead.png" alt="" style="display:none">
 		<img id="block" src="img/block.jpg" alt="" style="display:none">
+        <img id="sword_r" src="img/sword_r.png" alt="" style="display:none"/>
+        <img id="sword_l" src="img/sword_l.png" alt="" style="display:none"/>
         <img id="snake_r" src="img/snake_r.png" alt="" style="display:none"/>
         <img id="snake_l" src="img/snake_l.png" alt="" style="display:none"/>
 		<img id="gameover" src="img/gameover.png" alt="go" style="display:none"/>
@@ -18,7 +20,7 @@
 			<span style="color: white;">Score:&nbsp;</span><span id="score" style="color: white;">0</span>
 			
 			<br /><br />
-			<span style="color: white;">Avoid the snakes with the WASD keys.</span>
+			<span style="color: white;">Move with the WASD keys and attack with Space.</span>
         </div>
 		
 		<script type="text/javascript" src="script.js"></script>
