Updated reference to match image name change.

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 		<img id="block" src="img/block.jpg" alt="" style="display:none">
         <img id="sword_r" src="img/sword_r.png" alt="" style="display:none"/>
         <img id="sword_l" src="img/sword_l.png" alt="" style="display:none"/>
-        <img id="snake_r" src="img/snake_r.png" alt="" style="display:none"/>
-        <img id="snake_l" src="img/snake_l.png" alt="" style="display:none"/>
+        <img id="snake_r" src="img/snakes_r.png" alt="" style="display:none"/>
+        <img id="snake_l" src="img/snakes_l.png" alt="" style="display:none"/>
 		<img id="gameover" src="img/gameover.png" alt="go" style="display:none"/>
 		<div style="width:600px;margin-left:auto;margin-right:auto;text-align: center;">
 		    <canvas id="screen" width="600" height="600" ></canvas>
