Added up and down directions for character movement and sword attack.

--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@
 	<body style="background-color: black;">
 		<img id="player_r" src="img/player_r.png" alt="" style="display:none">
 		<img id="player_l" src="img/player_l.png" alt="" style="display:none">
+		<img id="player_u" src="img/player_u.png" alt="" style="display:none">
+		<img id="player_d" src="img/player_d.png" alt="" style="display:none">
 		<img id="player_dead" src="img/player_dead.png" alt="" style="display:none">
 		<img id="block" src="img/block.jpg" alt="" style="display:none">
         <img id="sword_r" src="img/sword_r.png" alt="" style="display:none"/>
-        <img id="sword_l" src="img/sword_l.png" alt="" style="display:none"/>
+		<img id="sword_l" src="img/sword_l.png" alt="" style="display:none"/>
+        <img id="sword_u" src="img/sword_u.png" alt="" style="display:none"/>
+        <img id="sword_d" src="img/sword_d.png" alt="" style="display:none"/>
         <img id="snake_r" src="img/snakes_r.png" alt="" style="display:none"/>
         <img id="snake_l" src="img/snakes_l.png" alt="" style="display:none"/>
 		<img id="gameover" src="img/gameover.png" alt="go" style="display:none"/>
@@ -18,7 +22,6 @@
 		    <canvas id="screen" width="800" height="800" ></canvas>
 			<button id="reset" type="button" style="width:100px;">Reset</button><br />
 			<span style="color: white;">Score:&nbsp;</span><span id="score" style="color: white;">0</span>
-			
 			<br /><br />
 			<span style="color: white;">Move with the WASD keys and attack with Space.</span>
         </div>
