--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 		<img id="player_d" src="img/player_d.png" alt="" style="display:none">
 		<img id="player_dead" src="img/player_dead.png" alt="" style="display:none">
 		<img id="block" src="img/block.jpg" alt="" style="display:none">
-        <img id="sword_r" src="img/sword_r.png" alt="" style="display:none"/>
-		<img id="sword_l" src="img/sword_l.png" alt="" style="display:none"/>
-        <img id="sword_u" src="img/sword_u.png" alt="" style="display:none"/>
-        <img id="sword_d" src="img/sword_d.png" alt="" style="display:none"/>
+        <img id="sword_r" src="img/sword_r.gif" alt="" style="display:none"/>
+		<img id="sword_l" src="img/sword_l.gif" alt="" style="display:none"/>
+        <img id="sword_u" src="img/sword_u.gif" alt="" style="display:none"/>
+        <img id="sword_d" src="img/sword_d.gif" alt="" style="display:none"/>
         <img id="snake_r" src="img/snakes_r.png" alt="" style="display:none"/>
         <img id="snake_l" src="img/snakes_l.png" alt="" style="display:none"/>
 		<img id="gameover" src="img/gameover.png" alt="go" style="display:none"/>
