--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<button id="reset" type="button" style="width:100px;">Reset</button><br />
 			<span style="color: white;">Score:&nbsp;</span><span id="score" style="color: white;">0</span>
 			<br /><br />
-			<span style="color: white;">Move with the WASD keys and attack with Space.</span>
+			<span style="color: white;">Move with the WASD keys and attack with Shift.</span>
         </div>
 		
 		<script type="text/javascript" src="script.js"></script>
