--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <img id="snake_l" src="img/snakes_l.png" alt="" style="display:none"/>
 		<img id="gameover" src="img/gameover.png" alt="go" style="display:none"/>
 		<img id="heart" src="img/heart.png" alt="" style="display:none"/>
+		<img id="heartPickup" src="img/heartPickup.png" alt="" style="display:none"/>
 		<div style="width:800px;margin-left:auto;margin-right:auto;text-align: center;">
 		    <canvas id="screen" width="800" height="800" ></canvas>
 			<button id="reset" type="button" style="width:100px;">Reset</button><br />
