Fix for sword animation
Using sprites instead of gif's since Canvas does not support gif animation.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<meta charset="UTF-8"> 
     <head>
 	    <title>
 		    RBI
@@ -11,10 +12,10 @@
 		<img id="player_d" src="img/player_d.png" alt="" style="display:none">
 		<img id="player_dead" src="img/player_dead.png" alt="" style="display:none">
 		<img id="block" src="img/block.jpg" alt="" style="display:none">
-        <img id="sword_r" src="img/sword_r.gif" alt="" style="display:none"/>
-		<img id="sword_l" src="img/sword_l.gif" alt="" style="display:none"/>
-        <img id="sword_u" src="img/sword_u.gif" alt="" style="display:none"/>
-        <img id="sword_d" src="img/sword_d.gif" alt="" style="display:none"/>
+        <img id="sword_r" src="img/sword_sprite.png" alt="" style="display:none"/>
+		<img id="sword_l" src="img/sword_sprite.png" alt="" style="display:none"/>
+        <img id="sword_u" src="img/sword_sprite.png" alt="" style="display:none"/>
+        <img id="sword_d" src="img/sword_sprite.png" alt="" style="display:none"/>
         <img id="snake_r" src="img/snakes_r.png" alt="" style="display:none"/>
         <img id="snake_l" src="img/snakes_l.png" alt="" style="display:none"/>
 		<img id="gameover" src="img/gameover.png" alt="go" style="display:none"/>
