--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 		<img id="player_d" src="img/player_d.png" alt="" style="display:none">
 		<img id="player_dead" src="img/player_dead.png" alt="" style="display:none">
 		<img id="block" src="img/block.jpg" alt="" style="display:none">
-        <img id="sword_r" src="img/sword_sprite.png" alt="" style="display:none"/>
-		<img id="sword_l" src="img/sword_sprite.png" alt="" style="display:none"/>
-        <img id="sword_u" src="img/sword_sprite.png" alt="" style="display:none"/>
-        <img id="sword_d" src="img/sword_sprite.png" alt="" style="display:none"/>
+        <img id="sword_r" src="img/sword_sprite_r.png" alt="" style="display:none"/>
+		<img id="sword_l" src="img/sword_sprite_l.png" alt="" style="display:none"/>
+        <img id="sword_u" src="img/sword_sprite_u.png" alt="" style="display:none"/>
+        <img id="sword_d" src="img/sword_sprite_d.png" alt="" style="display:none"/>
         <img id="snake_r" src="img/snakes_r.png" alt="" style="display:none"/>
         <img id="snake_l" src="img/snakes_l.png" alt="" style="display:none"/>
 		<img id="gameover" src="img/gameover.png" alt="go" style="display:none"/>
@@ -26,7 +26,7 @@
 			<button id="reset" type="button" style="width:100px;">Reset</button><br />
 			<span style="color: white;">Score:&nbsp;</span><span id="score" style="color: white;">0</span>
 			<br /><br />
-			<span style="color: white;">Move with the WASD keys and attack with Shift.</span>
+			<span style="color: white;">Move with the WASD keys and attack with F key.</span>
         </div>
 		
 		<script type="text/javascript" src="script.js"></script>
