Switched to a level loader using text.

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 			<span style="color: white;">Move with the WASD keys and attack with F key.</span>
         </div>
 		
+		<script type="text/javascript" src="levels.js"></script>
 		<script type="text/javascript" src="script.js"></script>
 	</body>
 </html>
