--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 		<img id="player_u" src="img/player_u.png" alt="" style="display:none">
 		<img id="player_d" src="img/player_d.png" alt="" style="display:none">
 		<img id="player_dead" src="img/player_dead.png" alt="" style="display:none">
-		<img id="block" src="img/block.jpg" alt="" style="display:none">
+		<img id="boundary" src="img/boundary.jpg" alt="" style="display:none">
+		<img id="stone" src="img/stone.png" alt="" style="display:none">
         <img id="sword_r" src="img/sword_sprite_r.png" alt="" style="display:none"/>
 		<img id="sword_l" src="img/sword_sprite_l.png" alt="" style="display:none"/>
         <img id="sword_u" src="img/sword_sprite_u.png" alt="" style="display:none"/>
