--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 		<img id="player_dead" src="img/player_dead.png" alt="" style="display:none">
 		<img id="boundary" src="img/boundary.jpg" alt="" style="display:none">
 		<img id="stone" src="img/stone.png" alt="" style="display:none">
+		<img id="treeTop" src="img/treeTop.png" alt="" style="display:none">
+		<img id="treeBottom" src="img/treeBottom.png" alt="" style="display:none">
         <img id="sword_r" src="img/sword_sprite_r.png" alt="" style="display:none"/>
 		<img id="sword_l" src="img/sword_sprite_l.png" alt="" style="display:none"/>
         <img id="sword_u" src="img/sword_sprite_u.png" alt="" style="display:none"/>
