Setup screen based system with new areas.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		    RBI
 	    </title>
     </head>
-	<body style="background-color: black;">
+	<body style="background-color: #333;">
 		<img id="player_r" src="img/player_r.png" alt="" style="display:none">
 		<img id="player_l" src="img/player_l.png" alt="" style="display:none">
 		<img id="player_u" src="img/player_u.png" alt="" style="display:none">
