Added bat image and updated movement for enemies

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <img id="sword_d" src="img/sword_sprite_d.png" alt="" style="display:none"/>
         <img id="snake_r" src="img/snakes_r.png" alt="" style="display:none"/>
         <img id="snake_l" src="img/snakes_l.png" alt="" style="display:none"/>
+        <img id="bat" src="img/bat.png" alt="" style="display:none"/>
 		<img id="gameover" src="img/gameover.png" alt="go" style="display:none"/>
 		<img id="heart" src="img/heart.png" alt="" style="display:none"/>
 		<img id="heartPickup" src="img/heartPickup.png" alt="" style="display:none"/>
