Added new player images and scythe weapon
Player and scythe from drawings on my website

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
 		<img id="sword_l" src="img/sword_sprite_l.png" alt="" style="display:none"/>
         <img id="sword_u" src="img/sword_sprite_u.png" alt="" style="display:none"/>
         <img id="sword_d" src="img/sword_sprite_d.png" alt="" style="display:none"/>
+        <img id="scythe_r" src="img/warscythe_sprite_r.png" alt="" style="display:none"/>
+		<img id="scythe_l" src="img/warscythe_sprite_l.png" alt="" style="display:none"/>
+        <img id="scythe_u" src="img/warscythe_sprite_u.png" alt="" style="display:none"/>
+        <img id="scythe_d" src="img/warscythe_sprite_d.png" alt="" style="display:none"/>
         <img id="snake_r" src="img/snakes_r.png" alt="" style="display:none"/>
         <img id="snake_l" src="img/snakes_l.png" alt="" style="display:none"/>
         <img id="bat" src="img/bat.png" alt="" style="display:none"/>
