--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 		<img id="player_d" src="img/player_d.png" alt="" style="display:none">
 		<img id="player_dead" src="img/player_dead.png" alt="" style="display:none">
 		<img id="boundary" src="img/boundary.jpg" alt="" style="display:none">
-		<img id="stone" src="img/stone.png" alt="" style="display:none">
+		<img id="stone1" src="img/stone1.png" alt="" style="display:none">
+		<img id="stone2" src="img/stone2.png" alt="" style="display:none">
+		<img id="stone3" src="img/stone3.png" alt="" style="display:none">
+		<img id="stone4" src="img/stone4.png" alt="" style="display:none">
 		<img id="treeTop" src="img/treeTop.png" alt="" style="display:none">
 		<img id="treeBottom" src="img/treeBottom.png" alt="" style="display:none">
         <img id="sword_r" src="img/sword_sprite_r.png" alt="" style="display:none"/>
