Rearranged images, added cactus, and updated levels

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 		<img id="stone2" src="img/stone2.png" alt="" style="display:none">
 		<img id="stone3" src="img/stone3.png" alt="" style="display:none">
 		<img id="stone4" src="img/stone4.png" alt="" style="display:none">
-		<img id="treeTop" src="img/treeTop.png" alt="" style="display:none">
-		<img id="treeBottom" src="img/treeBottom.png" alt="" style="display:none">
+		<img id="cactusTop" src="img/cactusTop.png" alt="" style="display:none">
+		<img id="cactusBottom" src="img/cactusBottom.png" alt="" style="display:none">
         <img id="sword_r" src="img/sword_sprite_r.png" alt="" style="display:none"/>
 		<img id="sword_l" src="img/sword_sprite_l.png" alt="" style="display:none"/>
         <img id="sword_u" src="img/sword_sprite_u.png" alt="" style="display:none"/>
