--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 		<img id="stone4" src="img/stone4.png" alt="" style="display:none">
 		<img id="cactusTop" src="img/cactusTop.png" alt="" style="display:none">
 		<img id="cactusBottom" src="img/cactusBottom.png" alt="" style="display:none">
-		<img id="cave" src="img/cave.png" alt="" style="display:none">
+		<img id="caveEntrance" src="img/caveEntrance.png" alt="" style="display:none">
+		<img id="grassBoundary" src="img/grassBoundary.png" alt="" style="display:none">
+		<img id="bush" src="img/bush.png" alt="" style="display:none">
         <img id="sword_r" src="img/sword_sprite_r.png" alt="" style="display:none"/>
 		<img id="sword_l" src="img/sword_sprite_l.png" alt="" style="display:none"/>
         <img id="sword_u" src="img/sword_sprite_u.png" alt="" style="display:none"/>
@@ -36,7 +38,8 @@
 		<div style="width:960px;margin-left:auto;margin-right:auto;text-align: center;">
 		    <canvas id="screen" width="960" height="540" ></canvas>
 			<button id="reset" type="button" style="width:100px;">Reset Game</button><br />
-			<span style="color: white;">Score:&nbsp;</span><span id="score" style="color: white;">0</span>
+			<span style="color: white;">Score:&nbsp;</span>
+			<span id="score" style="color: white;">0</span>
 			<br /><br />
 			<span style="color: white;">Move with the WASD keys and attack with F key.</span>
         </div>
