--- a/index.html
+++ b/index.html
@@ -1,6 +1,21 @@
 <!DOCTYPE html>
 <meta charset="UTF-8"> 
     <head>
+		<style>
+			body, a {
+				-webkit-touch-callout: none !important;
+				-webkit-user-select: none !important;
+				-khtml-user-select: none !important;
+				-moz-user-select: none !important;
+				-ms-user-select: none !important;
+				user-select: none !important;
+			}
+			.mobileControls {
+				color: white;
+				font-size: xx-large;
+				font-weight: bolder;
+			}
+		</style>
 	    <title>
 		    RBI
 	    </title>
@@ -36,12 +51,27 @@
 		<img id="heart" src="img/heart.png" alt="" style="display:none"/>
 		<img id="heartPickup" src="img/heartPickup.png" alt="" style="display:none"/>
 		<div style="width:960px;margin-left:auto;margin-right:auto;text-align: center;">
-		    <canvas id="screen" width="960" height="540" ></canvas>
-			<button id="reset" type="button" style="width:100px;">Reset Game</button><br />
-			<span style="color: white;">Score:&nbsp;</span>
-			<span id="score" style="color: white;">0</span>
-			<br /><br />
-			<span style="color: white;">Move with the WASD keys and attack with F key.</span>
+			<canvas id="screen" width="960" height="540" ></canvas>
+			<div style="width:300px;float:left;">
+				<a onmousedown="keyPressed[87] = true;" onmouseup="keyPressed[87] = false;" class="mobileControls" href="#">^</a>
+				<br>
+				<a onmousedown="keyPressed[65] = true;" onmouseup="keyPressed[65] = false;" class="mobileControls" href="#"><</a>
+				<a onmousedown="keyPressed[68] = true;" onmouseup="keyPressed[68] = false;" class="mobileControls" style="margin-left: 60px;" href="#">></a>
+				<br>
+				<a onmousedown="keyPressed[83] = true;" onmouseup="keyPressed[83] = false;" class="mobileControls" href="#">v</a>
+			</div>
+			<div style="width:360px;float:left;">
+				<button id="reset" type="button" style="width:100px;">Reset Game</button>
+				<br />
+				<span style="color: white;">Score:&nbsp;</span>
+				<span id="score" style="color: white;">0</span>
+				<br /><br />
+				<span style="color: white;">Move with the WASD or arrow keys and attack with F key.</span>
+			</div>
+			<div style="width:300px;float:left;">
+				<br>
+				<a onmousedown="keyPressed[70] = true;" onmouseup="keyPressed[70] = false;" class="mobileControls" href="#">Attack</a>
+			</div>
         </div>
 		
 		<script type="text/javascript" src="levels.js"></script>
