Changed sizing and added more letters to mobile buttons.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			}
 			.mobileControls {
 				color: white;
-				font-size: xx-large;
+				font-size: 250%;
 				font-weight: bolder;
 			}
 		</style>
@@ -53,15 +53,15 @@
 		<div style="width:960px;margin-left:auto;margin-right:auto;text-align: center;">
 			<canvas id="screen" width="960" height="540" ></canvas>
 			<div style="width:300px;float:left;">
-				<a id="upArrow" class="mobileControls" href="#">^</a>
-				<br>
-				<a id="leftArrow" class="mobileControls" href="#"><</a>
-				<a id="rightArrow" class="mobileControls" style="margin-left: 60px;" href="#">></a>
-				<br>
-				<a id="downArrow" class="mobileControls" href="#">v</a>
+				<a id="upArrow" class="mobileControls" href="#">^^^</a>
+				<br><br>
+				<a id="leftArrow" class="mobileControls" href="#"><<<</a>
+				<a id="rightArrow" class="mobileControls" style="margin-left: 100px;" href="#">>>></a>
+				<br><br>
+				<a id="downArrow" class="mobileControls" href="#">vvv</a>
 			</div>
 			<div style="width:360px;float:left;">
-				<button id="reset" type="button" style="width:100px;">Reset Game</button>
+				<button id="reset" type="button" style="width:150px;">Reset Game</button>
 				<br />
 				<span style="color: white;">Score:&nbsp;</span>
 				<span id="score" style="color: white;">0</span>
