Added lava level area

--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
 		<img id="caveEntrance" src="img/caveEntrance.png" alt="" style="display:none">
 		<img id="grassBoundary" src="img/grassBoundary.png" alt="" style="display:none">
 		<img id="bush" src="img/bush.png" alt="" style="display:none">
+		<img id="volBoundary" src="img/volBoundary.png" alt="" style="display:none">
+		<img id="volcanoEntrance" src="img/volcanoEntrance.png" alt="" style="display:none">
         <img id="sword_r" src="img/sword_sprite_r.png" alt="" style="display:none"/>
 		<img id="sword_l" src="img/sword_sprite_l.png" alt="" style="display:none"/>
         <img id="sword_u" src="img/sword_sprite_u.png" alt="" style="display:none"/>
@@ -50,27 +52,16 @@
 		<img id="gameover" src="img/gameover.png" alt="go" style="display:none"/>
 		<img id="heart" src="img/heart.png" alt="" style="display:none"/>
 		<img id="heartPickup" src="img/heartPickup.png" alt="" style="display:none"/>
+		
 		<div style="width:960px;margin-left:auto;margin-right:auto;text-align: center;">
 			<canvas id="screen" width="960" height="540" ></canvas>
-			<div style="width:300px;float:left;">
-				<a id="upArrow" class="mobileControls" href="#">^^^</a>
-				<br><br>
-				<a id="leftArrow" class="mobileControls" href="#"><<<</a>
-				<a id="rightArrow" class="mobileControls" style="margin-left: 100px;" href="#">>>></a>
-				<br><br>
-				<a id="downArrow" class="mobileControls" href="#">vvv</a>
-			</div>
-			<div style="width:360px;float:left;">
+			<div>
 				<button id="reset" type="button" style="width:150px;">Reset Game</button>
 				<br />
 				<span style="color: white;">Score:&nbsp;</span>
 				<span id="score" style="color: white;">0</span>
 				<br /><br />
 				<span style="color: white;">Move with the WASD or arrow keys on mobile and attack with F key.</span>
-			</div>
-			<div style="width:300px;float:left;">
-				<br>
-				<a id="attackBtn" class="mobileControls" href="#">Attack</a>
 			</div>
         </div>
 		
