Added new background images based on assets from itch.io

--- a/index.html
+++ b/index.html
@@ -49,9 +49,13 @@
         <img id="snake_r" src="img/snakes_r.png" alt="" style="display:none"/>
         <img id="snake_l" src="img/snakes_l.png" alt="" style="display:none"/>
         <img id="bat" src="img/bat.png" alt="" style="display:none"/>
-		<img id="gameover" src="img/gameover.png" alt="go" style="display:none"/>
+		<img id="gameover" src="img/gameover.png" alt="" style="display:none"/>
 		<img id="heart" src="img/heart.png" alt="" style="display:none"/>
 		<img id="heartPickup" src="img/heartPickup.png" alt="" style="display:none"/>
+
+		<img id="grassBG" src="img/itchio/grass.png" alt="" style="display:none"/>
+		<img id="caveBG" src="img/itchio/cave.png" alt="" style="display:none"/>
+		<img id="volcanoBG" src="img/itchio/volcano.png" alt="" style="display:none"/>
 		
 		<div style="width:960px;margin-left:auto;margin-right:auto;text-align: center;">
 			<canvas id="screen" width="960" height="540" ></canvas>
