Added folders for images

--- a/index.html
+++ b/index.html
@@ -21,37 +21,37 @@
 	    </title>
     </head>
 	<body style="background-color: #333;">
-		<img id="player_r" src="img/player_r.png" alt="" style="display:none">
-		<img id="player_l" src="img/player_l.png" alt="" style="display:none">
-		<img id="player_u" src="img/player_u.png" alt="" style="display:none">
-		<img id="player_d" src="img/player_d.png" alt="" style="display:none">
-		<img id="player_dead" src="img/player_dead.png" alt="" style="display:none">
-		<img id="boundary" src="img/boundary.jpg" alt="" style="display:none">
-		<img id="stone1" src="img/stone1.png" alt="" style="display:none">
-		<img id="stone2" src="img/stone2.png" alt="" style="display:none">
-		<img id="stone3" src="img/stone3.png" alt="" style="display:none">
-		<img id="stone4" src="img/stone4.png" alt="" style="display:none">
-		<img id="cactusTop" src="img/cactusTop.png" alt="" style="display:none">
-		<img id="cactusBottom" src="img/cactusBottom.png" alt="" style="display:none">
-		<img id="caveEntrance" src="img/caveEntrance.png" alt="" style="display:none">
-		<img id="grassBoundary" src="img/grassBoundary.png" alt="" style="display:none">
-		<img id="bush" src="img/bush.png" alt="" style="display:none">
-		<img id="volBoundary" src="img/volBoundary.png" alt="" style="display:none">
-		<img id="volcanoEntrance" src="img/volcanoEntrance.png" alt="" style="display:none">
-        <img id="sword_r" src="img/sword_sprite_r.png" alt="" style="display:none"/>
-		<img id="sword_l" src="img/sword_sprite_l.png" alt="" style="display:none"/>
-        <img id="sword_u" src="img/sword_sprite_u.png" alt="" style="display:none"/>
-        <img id="sword_d" src="img/sword_sprite_d.png" alt="" style="display:none"/>
-        <img id="scythe_r" src="img/warscythe_sprite_r.png" alt="" style="display:none"/>
-		<img id="scythe_l" src="img/warscythe_sprite_l.png" alt="" style="display:none"/>
-        <img id="scythe_u" src="img/warscythe_sprite_u.png" alt="" style="display:none"/>
-        <img id="scythe_d" src="img/warscythe_sprite_d.png" alt="" style="display:none"/>
-        <img id="snake_r" src="img/snakes_r.png" alt="" style="display:none"/>
-        <img id="snake_l" src="img/snakes_l.png" alt="" style="display:none"/>
-        <img id="bat" src="img/bat.png" alt="" style="display:none"/>
-		<img id="gameover" src="img/gameover.png" alt="" style="display:none"/>
-		<img id="heart" src="img/heart.png" alt="" style="display:none"/>
-		<img id="heartPickup" src="img/heartPickup.png" alt="" style="display:none"/>
+		<img id="player_r" src="img/player/player_r.png" alt="" style="display:none">
+		<img id="player_l" src="img/player/player_l.png" alt="" style="display:none">
+		<img id="player_u" src="img/player/player_u.png" alt="" style="display:none">
+		<img id="player_d" src="img/player/player_d.png" alt="" style="display:none">
+		<img id="player_dead" src="img/player/player_dead.png" alt="" style="display:none">
+		<img id="caveBoundary" src="img/objects/caveBoundary.jpg" alt="" style="display:none">
+		<img id="stone1" src="img/objects/stone1.png" alt="" style="display:none">
+		<img id="stone2" src="img/objects/stone2.png" alt="" style="display:none">
+		<img id="stone3" src="img/objects/stone3.png" alt="" style="display:none">
+		<img id="stone4" src="img/objects/stone4.png" alt="" style="display:none">
+		<img id="cactusTop" src="img/objects/cactusTop.png" alt="" style="display:none">
+		<img id="cactusBottom" src="img/objects/cactusBottom.png" alt="" style="display:none">
+		<img id="caveEntrance" src="img/objects/caveEntrance.png" alt="" style="display:none">
+		<img id="grassBoundary" src="img/objects/grassBoundary.png" alt="" style="display:none">
+		<img id="bush" src="img/objects/bush.png" alt="" style="display:none">
+		<img id="volBoundary" src="img/objects/volBoundary.png" alt="" style="display:none">
+		<img id="volcanoEntrance" src="img/objects/volcanoEntrance.png" alt="" style="display:none">
+        <img id="sword_r" src="img/weapons/sword_sprite_r.png" alt="" style="display:none"/>
+		<img id="sword_l" src="img/weapons/sword_sprite_l.png" alt="" style="display:none"/>
+        <img id="sword_u" src="img/weapons/sword_sprite_u.png" alt="" style="display:none"/>
+        <img id="sword_d" src="img/weapons/sword_sprite_d.png" alt="" style="display:none"/>
+        <img id="scythe_r" src="img/weapons/warscythe_sprite_r.png" alt="" style="display:none"/>
+		<img id="scythe_l" src="img/weapons/warscythe_sprite_l.png" alt="" style="display:none"/>
+        <img id="scythe_u" src="img/weapons/warscythe_sprite_u.png" alt="" style="display:none"/>
+        <img id="scythe_d" src="img/weapons/warscythe_sprite_d.png" alt="" style="display:none"/>
+        <img id="snake_r" src="img/enemies/snakes_r.png" alt="" style="display:none"/>
+        <img id="snake_l" src="img/enemies/snakes_l.png" alt="" style="display:none"/>
+        <img id="bat" src="img/enemies/bat.png" alt="" style="display:none"/>
+		<img id="gameover" src="img/objects/gameover.png" alt="" style="display:none"/>
+		<img id="heart" src="img/objects/heart.png" alt="" style="display:none"/>
+		<img id="heartPickup" src="img/objects/heartPickup.png" alt="" style="display:none"/>
 
 		<img id="grassBG" src="img/itchio/grass.png" alt="" style="display:none"/>
 		<img id="caveBG" src="img/itchio/cave.png" alt="" style="display:none"/>
