Added overworld area

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 		<img id="player_u" src="img/player/player_u.png" alt="" style="display:none">
 		<img id="player_d" src="img/player/player_d.png" alt="" style="display:none">
 		<img id="player_dead" src="img/player/player_dead.png" alt="" style="display:none">
+
 		<img id="caveBoundary" src="img/objects/caveBoundary.jpg" alt="" style="display:none">
 		<img id="stone1" src="img/objects/stone1.png" alt="" style="display:none">
 		<img id="stone2" src="img/objects/stone2.png" alt="" style="display:none">
@@ -33,11 +34,13 @@
 		<img id="stone4" src="img/objects/stone4.png" alt="" style="display:none">
 		<img id="cactusTop" src="img/objects/cactusTop.png" alt="" style="display:none">
 		<img id="cactusBottom" src="img/objects/cactusBottom.png" alt="" style="display:none">
-		<img id="caveEntrance" src="img/objects/caveEntrance.png" alt="" style="display:none">
+		<img id="caveEntrance" src="img/objects/caveEntrance_temp.png" alt="" style="display:none">
 		<img id="grassBoundary" src="img/objects/grassBoundary.png" alt="" style="display:none">
 		<img id="bush" src="img/objects/bush.png" alt="" style="display:none">
 		<img id="volBoundary" src="img/objects/volBoundary.png" alt="" style="display:none">
 		<img id="volcanoEntrance" src="img/objects/volcanoEntrance.png" alt="" style="display:none">
+		<img id="emptyBoundary" src="img/objects/emptyBoundary.png" alt="" style="display:none">
+
         <img id="sword_r" src="img/weapons/sword_sprite_r.png" alt="" style="display:none"/>
 		<img id="sword_l" src="img/weapons/sword_sprite_l.png" alt="" style="display:none"/>
         <img id="sword_u" src="img/weapons/sword_sprite_u.png" alt="" style="display:none"/>
@@ -45,10 +48,12 @@
         <img id="scythe_r" src="img/weapons/warscythe_sprite_r.png" alt="" style="display:none"/>
 		<img id="scythe_l" src="img/weapons/warscythe_sprite_l.png" alt="" style="display:none"/>
         <img id="scythe_u" src="img/weapons/warscythe_sprite_u.png" alt="" style="display:none"/>
-        <img id="scythe_d" src="img/weapons/warscythe_sprite_d.png" alt="" style="display:none"/>
+		<img id="scythe_d" src="img/weapons/warscythe_sprite_d.png" alt="" style="display:none"/>
+		
         <img id="snake_r" src="img/enemies/snakes_r.png" alt="" style="display:none"/>
         <img id="snake_l" src="img/enemies/snakes_l.png" alt="" style="display:none"/>
-        <img id="bat" src="img/enemies/bat.png" alt="" style="display:none"/>
+		<img id="bat" src="img/enemies/bat.png" alt="" style="display:none"/>
+		
 		<img id="gameover" src="img/objects/gameover.png" alt="" style="display:none"/>
 		<img id="heart" src="img/objects/heart.png" alt="" style="display:none"/>
 		<img id="heartPickup" src="img/objects/heartPickup.png" alt="" style="display:none"/>
@@ -56,6 +61,8 @@
 		<img id="grassBG" src="img/itchio/grass.png" alt="" style="display:none"/>
 		<img id="caveBG" src="img/itchio/cave.png" alt="" style="display:none"/>
 		<img id="volcanoBG" src="img/itchio/volcano.png" alt="" style="display:none"/>
+
+		<img id="overWorldBG00" src="img/overworlds/Navitas00.jpg" alt="" style="display:none"/>
 		
 		<div style="width:960px;margin-left:auto;margin-right:auto;text-align: center;">
 			<canvas id="screen" width="960" height="540" ></canvas>
@@ -65,7 +72,7 @@
 				<span style="color: white;">Score:&nbsp;</span>
 				<span id="score" style="color: white;">0</span>
 				<br /><br />
-				<span style="color: white;">Move with the WASD or arrow keys on mobile and attack with F key.</span>
+				<span style="color: white;">Move with the WASD keys and attack with the F key.</span>
 			</div>
         </div>
 		
